Fix overflow errors with word-break css

--- a/style.css
+++ b/style.css
@@ -29,11 +29,11 @@ body {
     border-radius: 25px;
     justify-content: center;
     align-items: flex-end;
-    font-size: 36px;
+    font-size: 35px;
 }
 
 #display #main {
-
+    word-break: break-all;
 }
 
 #display #secondary {
